--- a/env_wordpress/config/ansible/templates/000-default.conf.j2
+++ b/env_wordpress/config/ansible/templates/000-default.conf.j2
@@ -9,7 +9,7 @@
 	#ServerName www.example.com
 
 	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/wordpress
+	DocumentRoot {{ wp_app_wordpress_home }}
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
